Scrgrp.tf
# EC2-sg "Private"
resource "aws_security_group" "web01-sg" {
  name   = "web01-sg"
  vpc_id = aws_vpc.ead-vpc.id

  ingress {
    description     = "SSH from bastion"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2-sg "Bastion"
resource "aws_security_group" "bastion" {
  name   = "bastion"
  vpc_id = aws_vpc.ead-vpc.id

  ingress {
    description = "SSH from bastion"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["182.6.10.242/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
